--- a/submissions/Spark Vest Investment/.env.example
+++ b/submissions/Spark Vest Investment/.env.example
@@ -1,3 +1,3 @@
 VITE_PUBLIC_SERVER_URL = backend_url
-VITE_SUPABASE_URL = supabase_url
-VITE_SUPABASE_ANON_KEY = supabase_anon_key
+VITE_SUPABASE_URL = https://your-supabase-url.supabase.co
+VITE_SUPABASE_ANON_KEY = https://your-supabase-anon-key
